app/assets/stylesheets/layout/_navbar.scss
/* Main class */
.navbar-wagon {
  box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
  background: white;
  transition: all 0.3s ease;
  display: flex;
  height: 42px;
  padding: 0px 30px;
  align-items: center;
  justify-content: space-between;
  flex-direction: row-reverse;
  background-color: #CEE3F6;
  a {
    text-decoration: none;
  }
}

/* Optional class to fix the navbar on top */
.navbar-wagon-fixed {
  position: fixed;
  left: 0px;
  top: 0px;
  z-index: 1;
  width: 100%;
}

/* Navbar logo */
.navbar-wagon-brand img {
  height: 100px;
}

/* Navbar right section (with form, links, button) */
.navbar-wagon-right {
  display: flex;
  align-items: center;
  justify-content: space-between;
}

/* Navbar item */
.navbar-wagon-item {
  flex: 0 1 auto;
  cursor: pointer;
  padding: 0 20px;
}

/* Navbar standard link */
.navbar-wagon-link {
  color: #616668;
  font-size: 14px;
}
.navbar-wagon-link:hover {
  color: #da552f;
  text-decoration: none;
}

/* Navbar right button */
.navbar-wagon-button {
  margin-left: 10px;
  padding: 0 20px;
  border-radius: 20em;
  line-height: 40px;
  background-color: #D23333;
  color: white;
  font-size: 14px;
  border: 2px solid #D23333;
}
.navbar-wagon-button:hover {
  color: white;
  background: #D23333;
  border-color: #ac2626;
}

/* Navbar search form */
.navbar-wagon-search {
  flex: 0 1 300px;
  display: flex;
  justify-content: flex-end;
  padding: 0 10px;
  position: relative;
  height:40px;
}
.navbar-wagon-search-btn {
  line-height: 40px;
  color: #E6E6E6;
  border: none;
  background: transparent;
  position: absolute;
  right: 14px;
  top: -2px;
  z-index: 1;
}
.navbar-wagon-search-input {
  flex: 0 1 300px;
  transition: all 0.15s ease;
  line-height: 40px;
  font-weight: lighter;
  color: #666666;
  border: 1px solid #E6E6E6;
  border-radius: 5px;
  padding: 0 10px;
  font-size: 14px;
  outline: none;
}
.navbar-wagon-search-input:focus  {
  border: 1px solid #CCCCCC;
}

/* Navbar dropdown menu */
.navbar-wagon-dropdown-menu {
  margin-top: 15px;
  box-shadow: 1px 1px 4px #E6E6E6;
  border-color: #E6E6E6;
}
.navbar-wagon-dropdown-menu li > a {
  transition: color 0.3s ease;
  font-weight: lighter !important;
  color: #999999 !important;
  font-size: 15px !important;
  line-height: 22px !important;
  padding: 10px 20px;
}
.navbar-wagon-dropdown-menu li > a:hover {
  background: transparent !important;
  color: black !important;
}
.navbar-wagon-dropdown-menu:before {
  content: ' ';
  height: 10px;
  width: 10px;
  position: absolute;
  right: 10px;
  top: -6px;
  background-color: white;
  transform: rotate(45deg);
  border-left: 1px solid #E6E6E6;
  border-top: 1px solid #E6E6E6;
}

.navbar-logo-search-cart {
  text-align: center;
  // background-color: #FD4E68;

  display: flex;
  align-items: center;

  height: 100px;
}
.navbar-links {
  display: flex;
  align-items: baseline;
  font-size: 20px;
  ul li {
    display: inline;
  }
  li:hover {
    background-color: $pink-dark;
    color: #FFF;
  }
}

.navbar-buttons-menu {
  padding: 10px;
}

.navbar-buttons-menu:hover {
  color: #FFF;
  background-color: $pink-dark;
}

.navbar-menu-bg-color {
  background-color: $pink;
}

.cart-text {
  i {
    color: $pink-dark;
    font-size: 40px;
  }
}

.cart-container{
  position: relative;
  height: 100px;
  width: 274px;
}
.cart-size{
  height:25px;
  width:25px;
  border-radius:50%;
  background-color: $pink-dark;
  color: #FFF;
  font-size: 14px;
  position: relative;
  top: -30px;
  left: 48px;
  display: flex;
  justify-content: center;
  align-items: center;
  border: 1px #F7D1F6 solid;

}
.cart-price{
  position: relative;
  top: -46px;
  left: 70px;
  width: 100px;

}
.cart-basket {
  position: relative;
  top: 20px;
  left: -100px;
}

